headers/phonon.h


    typedef void                IPLvoid;            
    typedef int                 IPLint32;           
    typedef float               IPLfloat32;         
    typedef void*               IPLhandle;
    typedef enum {
        IPL_FALSE,  
        IPL_TRUE    
    } IPLbool;
    typedef enum {
        IPL_STATUS_SUCCESS,         
        IPL_STATUS_FAILURE,         
        IPL_STATUS_OUTOFMEMORY,     
        IPL_STATUS_INITIALIZATION   
    } IPLerror;
    typedef struct {
        IPLfloat32 x;   
        IPLfloat32 y;   
        IPLfloat32 z;   
    } IPLVector3;
    typedef struct {
        IPLVector3  center; 
        IPLfloat32  radius; 
    } IPLSphere;
    IPLAPI IPLVector3 iplCalculateRelativeDirection(IPLVector3 sourcePosition, IPLVector3 listenerPosition,
        IPLVector3 listenerAhead, IPLVector3 listenerUp);
    typedef enum {
        IPL_COMPUTEDEVICE_CPU,  
        IPL_COMPUTEDEVICE_GPU,  
        IPL_COMPUTEDEVICE_ANY   
    } IPLComputeDeviceType;
    typedef struct {
        IPLComputeDeviceType    type;                   
        IPLbool                 requiresTrueAudioNext;  
        IPLint32                minReservableCUs;       
        IPLint32                maxCUsToReserve;        
    } IPLComputeDeviceFilter;
    IPLAPI IPLerror iplCreateComputeDevice(IPLhandle context, IPLComputeDeviceFilter deviceFilter, IPLhandle* device);
    IPLAPI IPLvoid iplDestroyComputeDevice(IPLhandle* device);
    typedef enum {
        IPL_SCENETYPE_PHONON,   
        IPL_SCENETYPE_EMBREE,   
        IPL_SCENETYPE_FIRERAYS, 
        IPL_SCENETYPE_CUSTOM    
    } IPLSceneType;
    typedef enum {
        IPL_SIMTYPE_REALTIME,   
        IPL_SIMTYPE_BAKED       
    } IPLSimulationType;
    typedef struct {
        IPLSceneType        sceneType;              
        IPLint32            numRays;                
        IPLint32            numDiffuseSamples;      
        IPLint32            numBounces;             
        IPLfloat32          irDuration;             
        IPLint32            ambisonicsOrder;        
        IPLint32            maxConvolutionSources;  
    } IPLSimulationSettings;
    typedef struct {
        IPLint32    indices[3]; 
    } IPLTriangle;
    IPLAPI IPLvoid iplSetStaticMeshVertices(IPLhandle scene, IPLhandle staticMesh, IPLVector3* vertices);