src/bindgen.rs

#[test]
fn bindgen_test_layout_IPLSphere() {
    assert_eq!(
        ::std::mem::size_of::<IPLSphere>(),
        16usize,
        concat!("Size of: ", stringify!(IPLSphere))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLSphere>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLSphere))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLSphere>())).center as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSphere),
            "::",
            stringify!(center)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLSphere>())).radius as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSphere),
            "::",
            stringify!(radius)
        )
    );
}
extern "C" {
    /// Calculates the relative direction from the listener to a sound source. The returned direction
    /// vector is expressed in the listener's coordinate system.
    ///
    /// \param  sourcePosition      World-space coordinates of the source.
    /// \param  listenerPosition    World-space coordinates of the listener.
    /// \param  listenerAhead       World-space unit-length vector pointing ahead relative to the listener.
    /// \param  listenerUp          World-space unit-length vector pointing up relative to the listener.
    ///
    /// \return A unit-length vector in the listener's coordinate space, pointing from the listener to the source.
    pub fn iplCalculateRelativeDirection(
        sourcePosition: IPLVector3,
        listenerPosition: IPLVector3,
        listenerAhead: IPLVector3,
        listenerUp: IPLVector3,
    ) -> IPLVector3;
}
pub const IPLComputeDeviceType_IPL_COMPUTEDEVICE_CPU: IPLComputeDeviceType = 0;
pub const IPLComputeDeviceType_IPL_COMPUTEDEVICE_GPU: IPLComputeDeviceType = 1;
pub const IPLComputeDeviceType_IPL_COMPUTEDEVICE_ANY: IPLComputeDeviceType = 2;
pub type IPLComputeDeviceType = u32;
/// Specifies constraints on the type of OpenCL device to create. This information is intended to be passed to
/// \c iplCreateComputeDevice.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLComputeDeviceFilter {
    /// < The type of device to use.
    pub type_: IPLComputeDeviceType,
    /// < Whether the device must support AMD TrueAudio Next.
    pub requiresTrueAudioNext: IPLbool,
    /// < The minimum number of CUs that should be possible to
    /// reserve on the device, for TrueAudio Next.
    pub minReservableCUs: IPLint32,
    /// < The maximum number of CUs that the application needs to
    /// reserve on the device, for TrueAudio Next.
    pub maxCUsToReserve: IPLint32,
}
#[test]
fn bindgen_test_layout_IPLComputeDeviceFilter() {
    assert_eq!(
        ::std::mem::size_of::<IPLComputeDeviceFilter>(),
        16usize,
        concat!("Size of: ", stringify!(IPLComputeDeviceFilter))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLComputeDeviceFilter>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLComputeDeviceFilter))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLComputeDeviceFilter>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLComputeDeviceFilter),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<IPLComputeDeviceFilter>())).requiresTrueAudioNext as *const _ as
                usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLComputeDeviceFilter),
            "::",
            stringify!(requiresTrueAudioNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<IPLComputeDeviceFilter>())).minReservableCUs as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLComputeDeviceFilter),
            "::",
            stringify!(minReservableCUs)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<IPLComputeDeviceFilter>())).maxCUsToReserve as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLComputeDeviceFilter),
            "::",
            stringify!(maxCUsToReserve)
        )
    );
}
extern "C" {
    /// Creates a Compute Device object. The same Compute Device must be used by the game engine and audio engine
    /// parts of the Phonon integration. Depending on the OpenCL driver and device, this function may take some
    /// time to execute, so do not call it from performance-sensitive code.
    ///
    /// \param  context         The Context object used by the game engine.
    /// \param	deviceFilter    Constraints on the type of device to create.
    /// \param  device          [out] Handle to the created Compute Device object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateComputeDevice(
        context: IPLhandle,
        deviceFilter: IPLComputeDeviceFilter,
        device: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys a Compute Device object. If any other API objects are still referencing the Compute Device object,
    /// it will not be destroyed; destruction occurs when the object's reference count reaches zero.
    ///
    /// \param  device  [in, out] Address of a handle to the Compute Device object to destroy.
    pub fn iplDestroyComputeDevice(device: *mut IPLhandle) -> IPLvoid;
}
pub const IPLSceneType_IPL_SCENETYPE_PHONON: IPLSceneType = 0;
pub const IPLSceneType_IPL_SCENETYPE_EMBREE: IPLSceneType = 1;
pub const IPLSceneType_IPL_SCENETYPE_FIRERAYS: IPLSceneType = 2;
pub const IPLSceneType_IPL_SCENETYPE_CUSTOM: IPLSceneType = 3;
pub type IPLSceneType = u32;
pub const IPLSimulationType_IPL_SIMTYPE_REALTIME: IPLSimulationType = 0;
pub const IPLSimulationType_IPL_SIMTYPE_BAKED: IPLSimulationType = 1;
pub type IPLSimulationType = u32;
/// Configures the complexity of the simulation. You can fine-tune these values to arrive at a suitable
/// balance between performance, memory usage, and acoustic detail.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLSimulationSettings {
    /// < The ray tracer to use for simulation. \see IPLSceneType.
    pub sceneType: IPLSceneType,
    /// < The number of rays to trace from the listener. Increasing this
    /// number increases the accuracy of the simulation, but also
    /// increases CPU usage. Any positive integer may be specified,
    /// but typical values are in the range of 1024 to 131072.
    pub numRays: IPLint32,
    /// < The number of directions to consider when a ray bounces off
    /// a diffuse (or partly diffuse) surface. Increasing this number
    /// increases the accuracy of diffuse reflections, and does not
    /// significantly impact CPU usage. Any positive integer may be
    /// specified, but typical values are in the range of 32 to 4096.
    pub numDiffuseSamples: IPLint32,
    /// < The maximum number of times any ray can bounce within the scene.
    /// Increasing this number allows the simulation to more accurately
    /// model reverberant spaces, at the cost of increased CPU usage.
    /// Any positive integer may be specified, but typical values are
    /// in the range of 1 to 32.
    pub numBounces: IPLint32,
    /// < The time delay between a sound being emitted and the last
    /// audible reflection. Echoes and reverberation longer than this
    /// amount will not be modeled by the simulation. Any positive
    /// number may be specified, but typical values are in the range
    /// of 0.5 to 4.0.
    pub irDuration: IPLfloat32,
    /// < The amount of directional detail in the simulation results.
    /// Phonon encodes the simulation results using Ambisonics.
    /// Increasing this number increases the amount of directional
    /// detail in the simulated acoustics, but at the cost of
    /// increased CPU usage and memory consumption. Supported values
    /// are between 0 and 3.
    pub ambisonicsOrder: IPLint32,
    /// < The maximum number of sound sources that can be simulated
    /// and rendered using a Convolution Effect object at any point
    /// in time. If you attempt to create more than this many
    /// Convolution Effect objects, creation will fail. Increasing
    /// this number allows more sound sources to be rendered with
    /// sound propagation effects, but at the cost of increased
    /// memory consumption.
    pub maxConvolutionSources: IPLint32,
}
#[test]
fn bindgen_test_layout_IPLSimulationSettings() {
    assert_eq!(
        ::std::mem::size_of::<IPLSimulationSettings>(),
        28usize,
        concat!("Size of: ", stringify!(IPLSimulationSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLSimulationSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLSimulationSettings))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLSimulationSettings>())).sceneType as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSimulationSettings),
            "::",
            stringify!(sceneType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLSimulationSettings>())).numRays as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSimulationSettings),
            "::",
            stringify!(numRays)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<IPLSimulationSettings>())).numDiffuseSamples as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSimulationSettings),
            "::",
            stringify!(numDiffuseSamples)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLSimulationSettings>())).numBounces as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSimulationSettings),
            "::",
            stringify!(numBounces)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLSimulationSettings>())).irDuration as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSimulationSettings),
            "::",
            stringify!(irDuration)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<IPLSimulationSettings>())).ambisonicsOrder as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSimulationSettings),
            "::",
            stringify!(ambisonicsOrder)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<IPLSimulationSettings>())).maxConvolutionSources as *const _ as
                usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLSimulationSettings),
            "::",
            stringify!(maxConvolutionSources)
        )
    );
}
/// A triangle in 3D space. Triangles are specified by their three vertices, which are in turn specified using
/// indices into a vertex array. See iplSetStaticMeshVertices for how to specify the vertex array. Phonon uses
/// a counter-clockwise winding order. This means that when looking at the triangle such that the normal is
/// pointing towards you, the vertices are specified in counter-clockwise order.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLTriangle {
    /// < Indices of the three vertices of this triangle. Each triangle must be specified
    /// using three vertices; triangle strip or fan representations are not supported.
    pub indices: [IPLint32; 3usize],
}
